Add cdn for leaflet.js

--- a/app/templates/maps.html
+++ b/app/templates/maps.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v1.6.0/leaflet.css" />
+        <script src="http://cdn.leafletjs.com/leaflet/v1.6.0/leaflet.js"></script>
     </head>
+    <body>
+        
+    </body>
 </html>
